// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setup auth with argument auth type {"auth":"APIKEY","arg":"anApikey","returned":{}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {
      \\"apiKey\\": \\"anApikey\\"
    }
  }
}"
`;

exports[`setup auth with argument auth type {"auth":"BASIC","arg":"aUsername:aPassword","returned":{}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {
      \\"username\\": \\"aUsername\\",
      \\"password\\": \\"aPassword\\"
    }
  }
}"
`;

exports[`setup auth with argument auth type {"auth":"CUSTOM","arg":"","returned":{}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {}
  }
}"
`;

exports[`setup auth with argument auth type {"auth":"NONE","arg":"","returned":{}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {}
  }
}"
`;

exports[`setup auth with argument auth type {"auth":"OAUTH1","arg":"aKey:aConsumerSecret","returned":{"someDataFromOauth1Server":"ok"}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {
      \\"someDataFromOauth1Server\\": \\"ok\\"
    }
  }
}"
`;

exports[`setup auth with argument auth type {"auth":"OAUTH2","arg":"aClientId:aClientSecret","returned":{"someDataFromOauth2Server":"ok"}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {
      \\"someDataFromOauth2Server\\": \\"ok\\"
    }
  }
}"
`;

exports[`setup auth with environment variables {"auth":"APIKEY","env":{"BEARER_AUTH_APIKEY":"anApiKeyFromEnv"},"returned":{}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {
      \\"apiKey\\": \\"anApiKeyFromEnv\\"
    }
  }
}"
`;

exports[`setup auth with environment variables {"auth":"BASIC","env":{"BEARER_AUTH_USERNAME":"userNameFromEnv","BEARER_AUTH_PASSWORD":"passwordFromEnv"},"returned":{}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {
      \\"username\\": \\"userNameFromEnv\\",
      \\"password\\": \\"passwordFromEnv\\"
    }
  }
}"
`;

exports[`setup auth with environment variables {"auth":"CUSTOM","env":{},"returned":{}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {}
  }
}"
`;

exports[`setup auth with environment variables {"auth":"NONE","env":{},"returned":{}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {}
  }
}"
`;

exports[`setup auth with environment variables {"auth":"OAUTH1","env":{"BEARER_AUTH_CONSUMER_KEY":"aKeyFromEnv","BEARER_AUTH_CONSUMER_SECRET":"aSecretFromEnv"},"returned":{"someDataFromOauth1Server":"ok"}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {
      \\"someDataFromOauth1Server\\": \\"ok\\"
    }
  }
}"
`;

exports[`setup auth with environment variables {"auth":"OAUTH2","env":{"BEARER_AUTH_CLIENT_ID":"aClientIdFromEnv","BEARER_AUTH_CLIENT_SECRET":"sSecretFromEmv"},"returned":{"someDataFromOauth2Server":"ok"}} save to local.config.jsonc 1`] = `
"{
  \\"setup\\": {
    \\"auth\\": {
      \\"someDataFromOauth2Server\\": \\"ok\\"
    }
  }
}"
`;
